ajout d'aria, correction du contraste et modification du titre

--- a/src/styles/Contact.module.scss
+++ b/src/styles/Contact.module.scss
@@ -48,6 +48,7 @@
       color: $color-text;
       text-decoration: none;
       word-break: break-all;
+      text-wrap: balance;
 
       &:hover {
         color: $color-secondary;
