--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,7 +3,7 @@ $color-bg: #0f1115;
 $color-bg-soft: #151821;  
 $color-text: #f1f3f5;     
 $color-muted: #9aa0a6;    
-$color-primary: #4c6ef5;
+$color-primary: #486AF4;
 $color-secondary: #748ffc;
 
 
